--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'eclipse-wtp'
-apply plugin: 'idea'
 apply plugin: 'spring-boot' 
 apply plugin: 'war'
 
@@ -35,9 +35,6 @@ configurations {
 }
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-starter-aws')
-	compile('org.springframework.cloud:spring-cloud-starter-aws-jdbc')
-	compile('org.springframework.cloud:spring-cloud-starter-aws-messaging')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-websocket')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
